Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14370

sanity-quota test_12b: @@@@@@ FAIL: create failed, but expect success

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Lustre 2.12.8
    • None
    • ZFS
    • 3
    • 9223372036854775807

      that seem to due incorrect usage of txg_wait_callbacks() in osd_wait_quota_pending().
      notice the following comment in ZFS:

       * Wait for pending commit callbacks of already-synced transactions to finish
       * processing.
      

      i.e. it won't be waiting for transactions that in-sync holding "pending" quota.
      I think we should be calling dt_sync() instead

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: